# WeatherForecastApp

./: CMakeLists.txt  README.md  config.json
lib/: CMakeLists.txt  Forecast.cpp  Forecast.h  Weather.cpp  Weather.h
